--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-is": "^16.12.0",
     "rfs": "^9.0.2",
     "styled-components": "^5.0.0",
+    "tslib": "^1.10.0",
     "typeface-asap": "0.0.69",
     "typeface-cormorant-infant": "0.0.71"
   },
