--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/react-fontawesome": "^0.1.8",
+    "@oclif/errors": "^1.2.2",
     "@types/prop-types": "^15.7.3",
     "@types/react-helmet": "^5.0.15",
     "@types/styled-components": "^4.4.2",
