--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-  "typescript.tsdk": ".vscode/pnpify/typescript/lib"
+  "typescript.tsdk": ".vscode/pnpify/typescript/lib",
+  "prettier.packageManager": "yarn",
+  "prettier.prettierPath": "/Users/jennifershields/Code/catalogue-site/.yarn/unplugged/prettier-npm-1.19.1-e56d246fd2/node_modules/prettier/"
 }
