--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,16 +7,9 @@ commands:
   gatsby-build:
     steps:
       - checkout
-      - restore_cache:
-          keys:
-            - yarn-cache-{{ checksum "yarn.lock" }}
       - run:
           name: Install Dependencies
-          command: yarn install
-      - save_cache:
-          key: yarn-cache-{{ checksum "yarn.lock" }}
-          paths:
-            - ./yarn/cache
+          command: npm install
       - restore_cache:
           keys:
             - gatsby-public-cache-{{ .Branch }}
@@ -43,4 +36,4 @@ jobs:
       - gatsby-build
       - run:
           name: Deploy to netlify
-          command: yarn netlify deploy --dir=./public --prod
+          command: npm netlify deploy --dir=./public --prod
