--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ commands:
             - gatsby-public-cache-{{ .Branch }}
       - run:
           name: Gatsby Build
-          command: GATSBY_CPU_COUNT=2 yarn build
+          command: GATSBY_CPU_COUNT=2 npm build
       - save_cache:
           key: gatsby-public-cache-{{ .Branch }}
           paths:
