--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,5 +35,8 @@ jobs:
     steps:
       - gatsby-build
       - run:
+        name: Install Netlify CLI
+        command: npm install -g --silent netlify-cli
+      - run:
           name: Deploy to netlify
-          command: curl -X POST -d {} ${hook}
+          command: netlify deploy --dir=./public -p
